[Added] OC-480 #comment updated to JAVA 17, update gradle, updated Spring Boot to 3.0 #time 10d